fix js error, hide overflow on bubble anims

--- a/css/main.scss
+++ b/css/main.scss
@@ -35,6 +35,7 @@ body {
     overflow: hidden;
 }
 .particles {
+    overflow:hidden;
     position: absolute;
     top: 0;
     left: 0;
@@ -378,6 +379,7 @@ section {
         flex-direction: column;
         
         &-container {
+            margin: 1.5% auto;
             min-height: 240px;
             display: flex;
             flex-direction: column;
